[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/Scenes/Song/SongFilter/SongFilters.gd" type="Script" id=1]
[ext_resource path="res://src/Ressources/Fonts/Jetbrains_Italic.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.215686, 0.215686, 0.215686, 1 )

[sub_resource type="StyleBoxEmpty" id=5]
content_margin_left = 5.0

[sub_resource type="StyleBoxEmpty" id=6]
content_margin_left = 5.0

[sub_resource type="StyleBoxEmpty" id=7]
content_margin_left = 5.0

[node name="SongFilters" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 10.0
margin_top = 10.0
margin_right = 1110.0
margin_bottom = 35.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 8 )

[node name="Filter" type="LineEdit" parent="MarginContainer/PanelContainer"]
margin_right = 1100.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/read_only = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Filter Songs"

[connection signal="focus_entered" from="MarginContainer/PanelContainer/Filter" to="." method="_on_Filter_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/PanelContainer/Filter" to="." method="_on_Filter_focus_exited"]
[connection signal="text_changed" from="MarginContainer/PanelContainer/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="text_entered" from="MarginContainer/PanelContainer/Filter" to="." method="_on_Filter_text_entered"]
